# ecb-fx-rates

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ecb_fx_rates/: __init__.py  client.py  models.py
tests/: test_client.py  test_models.py
